updated product info model

--- a/Tutoring_Website/Pages/Tutors/Index.cshtml
+++ b/Tutoring_Website/Pages/Tutors/Index.cshtml
@@ -57,7 +57,7 @@
         @Html.DisplayFor(m => item.tutor_rate)
     </td>
     <td>
-        @Html.DisplayFor(m => item.tutor_img)
+        <img src="@Html.DisplayFor(m => item.tutor_img)" width="100" height="100" />
     </td>
     <td>
         @Html.DisplayFor(m => item.tutor_rating)
@@ -124,7 +124,7 @@
         @Html.DisplayFor(m => item.tutor_rate)
     </td>
     <td>
-        @Html.DisplayFor(m => item.tutor_img)
+        <img src="@Html.DisplayFor(m => item.tutor_img)" width="100" height="100" />    
     </td>
     <td>
         @Html.DisplayFor(m => item.tutor_rating)
