--- a/Tutoring_Website/wwwroot/css/site.css
+++ b/Tutoring_Website/wwwroot/css/site.css
@@ -1,10 +1,13 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+}
+
+nav {
+    height: 85px;
 }
 
 /* Provide sufficient contrast against white background */
@@ -59,8 +62,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    font-family: 'Open Sans', sans-serif;
 }
 .footer {
   position: absolute;
@@ -68,4 +72,14 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+
+.home {
+    background: url(../images/student.jpg) no-repeat center center fixed;
+    display:table;
+    height:50vh;
+    position:relative; 
+    width: 100vw;
+    background-size: cover;
 }
